refactore(Contato,TipoContato): Ajustes na Model e Enum, para inserir os dados corretamente